--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body {
 	font-family: 'Open Sans';
+	font-size: 16px;
+	line-height: 1.625;
 }
 h1,h2,h3,h4 {
 	font-family: 'Raleway';
+	line-height: 1.625;
 }
 .details {
 	margin-top: 24px;
@@ -32,7 +35,7 @@ main a:hover {
 }
 
 p {
-	margin-top: 20px;
+	margin-top: 6px;
 }
 
 em {
@@ -45,4 +48,20 @@ em {
 	text-align: right;
 	display: block;
 	margin-top: 30px;
+}
+
+.navbar-default {
+	margin: 0;
+}
+
+.emphbox {
+	background-color: #EEE;
+	margin: 0;
+	padding: 17.5px;
+	width: 100%;
+	text-align: center;
+}
+p.emphbox {
+	font-weight: bold;
+	font-size: 18px;
 }
